--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import "generic/styleguide";
-@import "components/container";
+@import "components/app";
 @import "components/header";
 @import "components/search-form";
 @import "components/search-results";
+@import "components/detail";
