--- a/src/templates/layouts/main.hbs
+++ b/src/templates/layouts/main.hbs
@@ -4,27 +4,26 @@
     <title>Giffie</title>
     <meta name="robots" content="noindex, nofollow">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
 
-    <div id="container">
+    <div class="container">
+        {{{body}}}
     </div>
 
     {{#dev}}
-    <script src="../jspm_packages/system.js"></script>
-    <script src="../jspm.browser.js"></script>
-    <script src="../jspm.config.js"></script>
+    <script src="/node_modules/systemjs/dist/system.js"></script>
+    <script src="/systemjs.config.js"></script>
     <script>
 
-        System.import('./js/impl.js');
+        System.import('/js/impl.js');
 
     </script>
     {{/dev}}
 
     {{^dev}}
-    <script src="js/impl.sfx.js"></script>
+    <script src="/js/impl.sfx.js"></script>
     {{/dev}}
-
 </body>
 </html>
